button alignment at purcharse-order-confirm corrected

--- a/app/styles/products-to-buy.css
+++ b/app/styles/products-to-buy.css
@@ -330,7 +330,7 @@ padding-left: 6px;
 }
 
 .btns-details-products-to-buy-item .btn{ 
-	margin: 10px 5px 0 5px !important;
+	margin: 10px 0px 0 0px !important;
 }
 
 .border-none{
